# r-wg

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
docs/: gotatun-local-patch.md  linux-full-tunnel-rx-zero.md  logging.md  ui-refactor-progress.md
proto/: ephemeralpeer.proto
resources/linux/: r-wg-repair.service  r-wg.desktop  r-wg.service  r-wg.socket
resources/windows/: r-wg.rc
scripts/: build_with_cap.sh  collect_diag.sh
scripts/linux/: build_with_cap.sh  collect_diag.sh  run_with_cap.sh  test_connmark_nft.sh
scripts/windows/: diag_windows.ps1
src/: dns.rs  lib.rs  log.rs  main.rs  tls.rs  ui.rs
src/application/: backend_admin.rs  config_library.rs  diagnostics.rs  mod.rs  tunnel_session.rs
src/backend/: mod.rs
src/backend/wg/: config.rs  engine.rs  ephemeral.rs  ipc.rs  ipc_client.rs  ipc_server.rs  linux_kernel.rs  linux_service.rs  mod.rs  quantum.rs  relay_inventory.rs  windows_elevated.rs  windows_pipe.rs  windows_service.rs  windows_service_host.rs  windows_service_manager.rs
src/backend/wg/config/: mapping.rs  mod.rs  parser.rs  types.rs
src/backend/wg/engine/: backend_strategy.rs  command.rs  error.rs  mod.rs  runner.rs  snapshot.rs  start_pipeline.rs  state.rs  stop_pipeline.rs  types.rs
src/backend/wg/linux_service/: auth.rs  client.rs  entry.rs  fs_ops.rs  install_model.rs  manage.rs  mod.rs  render.rs  server.rs  systemd.rs  tests.rs
src/backend/wg/route_plan/: explain.rs  ids.rs  mod.rs  normalize.rs  planner.rs  presentation.rs  tests.rs  util.rs
src/backend/wg/tools/: cidr.rs  mod.rs  reachability.rs
src/core/: dns.rs  mod.rs
src/core/config/: mod.rs  parser.rs  types.rs
src/core/route_plan/: apply_report.rs  ids.rs  mod.rs  normalize.rs  planner.rs  tests.rs  util.rs
src/log/events/: app.rs  dns.rs  engine.rs  ipc.rs  mod.rs  net.rs  service.rs  stats.rs  ui.rs
src/platform/: mod.rs
src/platform/linux/: mod.rs  network.rs
src/platform/linux/network/: apply_pipeline.rs  apply_plan.rs  cleanup_pipeline.rs  dns.rs  killswitch.rs  logging.rs  netlink.rs  policy.rs  recovery.rs  routes.rs
src/platform/macos/: mod.rs
src/platform/windows/: adapter.rs  addresses.rs  apply_pipeline.rs  cleanup_pipeline.rs  dns.rs  error.rs  firewall.rs  metrics.rs  mod.rs  mtu.rs  nrpt.rs  recovery.rs  report.rs  routes.rs  sockaddr.rs
src/storage/: app_paths.rs  atomic.rs  config_repository.rs  mod.rs  permissions.rs  state_repository.rs
src/ui/: actions.rs  app.rs  components.rs  features.rs  format.rs  i18n.rs  permissions.rs  persistence.rs  state.rs  theme_lint.rs  themes.rs  tray.rs
src/ui/actions/: app.rs  config.rs  import_export.rs  logs.rs  persistence.rs  route_map.rs  stats.rs  status.rs  theme.rs  tunnel.rs
src/ui/actions/config/: cache.rs  clipboard.rs  dialogs.rs  draft.rs  endpoint_family.rs  inputs.rs  mod.rs  naming.rs  selection.rs  storage.rs  workspace.rs
src/ui/actions/persistence/: configs.rs  prefs.rs  restore.rs  snapshot.rs  traffic.rs
src/ui/actions/tools/: active_config.rs  audit.rs  cidr.rs  mod.rs  reachability.rs
src/ui/commands/: configs.rs  mod.rs  navigation.rs  proxies.rs  tunnel.rs
src/ui/features/: app_update.rs
src/ui/features/backend_admin/: controller.rs
src/ui/features/configs/: app.rs  controller.rs  dialogs.rs  draft.rs  endpoint_family.rs  import_export.rs  inputs.rs  mod.rs  state.rs  storage.rs
src/ui/features/daita_resources/: controller.rs
src/ui/features/overview/: cards.rs  chart.rs  common.rs  mod.rs  traffic.rs  traffic_analytics.rs  traffic_share.rs  traffic_trend.rs  view.rs  view_model.rs
src/ui/features/proxies/: badges.rs  collection.rs  controller.rs  detail.rs  mod.rs  model.rs  view.rs
src/ui/features/route_map/: controller.rs  data.rs  events.rs  evidence_model.rs  explain_model.rs  graph.rs  inspector.rs  inventory.rs  mod.rs  plan_model.rs  presentation_allowed.rs  presentation_helpers.rs  presentation_inventory.rs  presentation_policy.rs  presentation_warnings.rs  presenter.rs  routes.rs  selection_model.rs  view.rs
src/ui/features/session/: controller.rs  lifecycle.rs  mod.rs  password_gate.rs  polling.rs
src/ui/features/themes/: catalog.rs  controller.rs  files.rs  mod.rs  (+4 more)
src/ui/single_instance/: linux.rs  mod.rs  protocol.rs  windows.rs
src/ui/state/: app.rs  app_language.rs  app_layout_prefs.rs  app_runtime_prefs.rs  app_session.rs  app_theme.rs  backend.rs  config_domain.rs  configs.rs  constants.rs  daita_resources.rs  navigation.rs  overview_traffic.rs  persistence_queue.rs  prefs.rs  route_map_search.rs  runtime.rs  selection.rs  stats.rs  stores.rs  traffic.rs  ui_runtime.rs
src/ui/tray/: controller.rs  mod.rs  types.rs
src/ui/view/: about.rs  advanced.rs  center_panel.rs  configs.rs  data.rs  dns.rs  left_panel.rs  logs.rs  mod.rs  overview.rs  proxies.rs  proxies_grid.rs  right_panel.rs  shared.rs  top_bar.rs  widgets.rs
tests/: log.rs
(+88 files in other folders)
