[package]
name = "r-wg"
version = "0.2.7"
edition = "2021"
build = "build.rs"

[dependencies]
gpui = "0.2.2"
gpui-component = { version = "0.5.1", features = ["tree-sitter-languages"] }
gpui-component-assets = "0.5.1"
gotatun = { version = "0.4.1", features = ["device", "tun"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread", "sync", "net", "process"] }
base64 = "0.22.1"
chrono = "0.4.43"
crossbeam-queue = "0.3.12"
futures-util = "0.3"
ipnetwork = "0.21.1" # gotatun 公共 Peer/Allowed IPs 类型依赖
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
raw-window-handle = "0.6.2"
# smallvec is included here for convenience, it is used by gpui when creating
# components that can have children. uncomment this line or
# use `cargo add smallvec` to add it to your project
#smallvec = "1.13.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_NetworkManagement_Ndis",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_WindowsFilteringPlatform",
    "Win32_Networking_WinSock",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_DataExchange",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_Pipes",
    "Win32_System_ProcessStatus",
    "Win32_System_Rpc",
    "Win32_System_Services",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.20.0"
netlink-packet-route = "0.28.0"
libc = "0.2.180"
zbus = "5.13.2"

[build-dependencies]
embed-resource = "3.0.6"
